-Implemented AutoUpdater -Integration lbry.go api server
